--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "react-native-svg": "6.5.2",
         "react-native-svg-uri": "1.2.3",
         "react-native-vector-icons": "5.0.0",
-        "react-native-easy-toast": "1.0.6",
+        "react-native-easy-toast": "^1.2.0",
         "pod-installer": "0.0.0"
     },
     "devDependencies": {
